--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -2,10 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true"
+             BackgroundColor="#f9fafb"
              xmlns:controls="clr-namespace:ManageGo.Controls"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.MaintenanceTicketsPage">
-   <StackLayout Spacing="0">
-        <StackLayout Orientation="Horizontal" Padding="8" HeightRequest="42">
+   <Grid RowSpacing="0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <StackLayout Grid.Row="0" Orientation="Horizontal" Padding="8" HeightRequest="42">
             <Button BackgroundColor="Transparent"
                     Command="{Binding OnMasterMenuTapped}"
                     HorizontalOptions="Start"
@@ -14,25 +20,42 @@
                     Image="nav_menu_icon.png" />
             <Image Source="logo.png" Margin="-32,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
-            <Label Text="Tickets" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Small" HorizontalTextAlignment="Center"/>
-            <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
-            <Grid>
+        <StackLayout Spacing="0" Grid.Row="1">
+            <Label  Text="Tickets" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Small" HorizontalTextAlignment="Center"/>
+             <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
+            <Grid VerticalOptions="FillAndExpand" MinimumHeightRequest="50" HeightRequest="50">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="1" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button Command="{Binding OnCalendarButtonTapped}" Grid.Column="0" TextColor="Black" Image="calendar_blue.png" Text="Calendar"  />
-                <BoxView Grid.Column="1" BackgroundColor="#ebebeb" WidthRequest="1" HorizontalOptions="FillAndExpand" />
-                <Button Grid.Column="2" TextColor="Black" Image="filter_blue.png" Text="Filter"  />
+                <Button Grid.Row="0" VerticalOptions="CenterAndExpand" Command="{Binding OnCalendarButtonTapped}" Grid.Column="0" TextColor="Black" Image="calendar_blue.png" Text="Calendar"  />
+                <BoxView Grid.Row="0" VerticalOptions="CenterAndExpand" Grid.Column="1" BackgroundColor="#ebebeb" WidthRequest="1" HorizontalOptions="FillAndExpand" />
+                <Button Grid.Row="0" VerticalOptions="CenterAndExpand" Grid.Column="2" TextColor="Black" Image="filter_blue.png" Text="Filter"  />
 
             </Grid>
             <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
             <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
-            <ContentView Content="{Binding PopContentView}" />
+            <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
         
-        <ScrollView VerticalOptions="FillAndExpand" BackgroundColor="#f8f9fa">
-             
-        </ScrollView>
-    </StackLayout>
+        </StackLayout>
+       
+            
+        <ListView Grid.Row="2" HasUnevenRows="true" VerticalOptions="StartAndExpand" BackgroundColor="#f9fafb" SeparatorVisibility="None" ItemsSource="{Binding FetchedTickets}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Frame HasShadow="false" Margin="8" Padding="2" BackgroundColor="White">
+                            <Grid>
+                                <Label Text="{Binding TicketSubject}" FontAttributes="Bold" LineBreakMode="TailTruncation" />
+                            </Grid>    
+                        </Frame>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+    </Grid>
 </ContentPage>
