* App.xaml.cs: added filtering
* Tags.cs:
* User.cs:
* Building.cs:
* Categories.cs:
* APIpaths.cs:
* DataAccess.cs:
* InverseBoolConverter.cs:
* TicketPriorities.cs:
* Welcomepagemodel.cs:
* MaintenanceTicketsPage.xaml:
* TicketFilterSelectView.xaml:
* MaintenanceTicketsPage.xaml.cs:
* MaintenanceTicketsPageModel.cs:

--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -2,10 +2,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true"
+             xmlns:local="clr-namespace:ManageGo"
              BackgroundColor="#f9fafb"
              xmlns:controls="clr-namespace:ManageGo.Controls"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.MaintenanceTicketsPage">
-   <Grid RowSpacing="0">
+    <ContentPage.Resources>
+        <local:InverseBoolConverter x:Key="InverseBoolConverter" />
+    </ContentPage.Resources>
+    <Grid RowSpacing="0">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
@@ -34,7 +38,10 @@
                 </Grid.ColumnDefinitions>
                 <Button Grid.Row="0" VerticalOptions="CenterAndExpand" Command="{Binding OnCalendarButtonTapped}" Clicked="Handle_Clicked" Grid.Column="0" TextColor="Black" Image="calendar_blue.png" Text="Calendar"  />
                 <BoxView Grid.Row="0" VerticalOptions="CenterAndExpand" Grid.Column="1" BackgroundColor="#ebebeb" WidthRequest="1" HorizontalOptions="FillAndExpand" />
-                <Button Grid.Row="0" VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" Clicked="Handle_Clicked" Grid.Column="2" TextColor="Black" Image="filter_blue.png" Text="Filter"  />
+                <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
+                    <Button VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" Clicked="Handle_Clicked" TextColor="Black" Image="filter_blue.png" Text="Filter"  />
+                    <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="StartAndExpand" FontSize="Small" Margin="-3,8,0,0" TextColor="#318bfa"/>
+                </StackLayout>
             </Grid>
             <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
             <BoxView BackgroundColor="#f7f9fa" HeightRequest="2"/>
@@ -86,7 +93,8 @@
                                     <Button Text="View ticket" IsVisible="{Binding FirstCommentShown}" InputTransparent="true" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#318bfa" BackgroundColor="Transparent"/>
                                 </StackLayout>
                                 <StackLayout Grid.Column="2" Padding="8,8,4,8">
-                                    <Image  Source="chevron_down.png" VerticalOptions="Start" HorizontalOptions="End"/>
+                                    <Image  Source="chevron_down.png" Rotation="0" IsVisible="{Binding FirstCommentShown, Converter={StaticResource InverseBoolConverter} }" VerticalOptions="Start" HorizontalOptions="End"/>
+                                    <Image  Source="chevron_down.png" Rotation="180" IsVisible="{Binding FirstCommentShown}" VerticalOptions="Start" HorizontalOptions="End"/>
                                     <StackLayout.GestureRecognizers>
                                             <TapGestureRecognizer NumberOfTapsRequired="1"  CommandParameter="{Binding .}" Tapped="Handle_Tapped" />
                                     </StackLayout.GestureRecognizers>
@@ -97,5 +105,12 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        
+         <Frame IsVisible="{Binding IsSearching}" Grid.Row="2" HasShadow="false" BackgroundColor="#99000000" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+            <StackLayout>
+                <ActivityIndicator Color="White" IsRunning="true" HorizontalOptions="Center" VerticalOptions="Center" />
+                <Label Text="Searching..." TextColor="White"/>
+            </StackLayout>
+        </Frame>
     </Grid>
 </ContentPage>
