* ManageGo.Android.csproj: added ticket detail view
* App.xaml:
* File.cs:
* Comments.cs:
* FontData.cs:
* APIpaths.cs:
* CommentTypes.cs:
* DataAccess.cs:
* TicketDetails.cs:
* ManageGo.iOS.csproj:
* plus_1.png:
* chat_lg.png:
* plus_1_1.png:
* gradient.png:
* plus_1@2x.png:
* plus_1@3x.png:
* TicketDetailsPage.xaml:
* chat_lg@2x.png:
* BaseDetailPage.cs:
* chat_lg@3x.png:
* plus_1_1@3x.png:
* plus_1_1@2x.png:
* Welcomepagemodel.cs:
* TicketDetailsPage.xaml.cs:
* MaintenanceTicketsPage.xaml:
* FormattedStringBuilder.cs:
* TicketDetailsPageModel.cs:
* MaintenanceTicketsPage.xaml.cs:
* Resource.designer.cs:
* MaintenanceTicketsPageModel.cs:
* chat_lg.png:
* chat_lg.png:
* plus_1_1.png:
* chat_lg.png:
* plus_1_1.png:
* plus_1_1.png:
* gradient.png:

--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -14,7 +14,7 @@
 
             <Color x:Key="Green">#55C433</Color>
             <Color x:Key="Red">#E13D40</Color>
-             <Style x:Key="Regular-Text" TargetType="Label">
+            <Style x:Key="Regular-Text" TargetType="Label">
                 
             </Style>
             <Style x:Key="Small-Text" TargetType="Label" BasedOn="{StaticResource Regular-Text}">
@@ -23,8 +23,15 @@
             <Style x:Key="Primary-Small" TargetType="Label" BasedOn="{StaticResource Small-Text}">
                 <Setter Property="TextColor" Value="{StaticResource Primary}" />
             </Style>
-           
-           
+            <Style x:Key="My-TitleFirstPart-Style" TargetType="Span">
+                <Setter Property="FontSize" Value="Medium" />
+                <Setter Property="FontAttributes" Value="Bold" />
+                <Setter Property="TextColor" Value="#58595b" />
+            </Style>
+            <Style x:Key="My-TitleSecondPart-Style" TargetType="Span">
+                <Setter Property="FontSize" Value="Small" />
+                <Setter Property="TextColor" Value="#a7a9ac" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
