* pdf.js: Added photo/video record/playback
* IShareFile.cs:
* File.cs:
* ManageGo.csproj:
* ListEventArgs.cs:
* CustomWebView.cs:
* Comments.cs:
* APIkeys.cs:
* APIpaths.cs:
* OutputRecorder.cs:
* CustomEntry.cs:
* CameraPreview.cs:
* DataAccess.cs:
* UICameraPreview.cs:
* clip.png:
* WelcomePage.xaml:
* PhotoHelper.cs:
* TicketDetails.cs:
* ManageGo.iOS.csproj:
* MGWebViewPage.xaml:
* TakeVideoPage.xaml:
* clip@3x.png:
* CameraPageRenderer.cs:
* clip@2x.png:
* VideoPlayerRenderer.cs:
* MGWebViewPage.xaml.cs:
* TakeVideoPage.xaml.cs:
* CustomWebViewRenderer.cs:
* TicketDetailsPage.xaml:
* arrow_right.png:
* ShareFileImplementation.cs:
* internal_open.png:
* ManageGo.Android.csproj:
* TicketDetailsPage.xaml.cs:
* arrow_right@3x.png:
* arrow_right@2x.png:
* MGWebViewPageModel.cs:
* TakeVideoPageModel.cs:
* CustomWebViewRenderer.cs:
* internal_closed.png:
* MaintenanceTicketsPage.xaml:
* internal_open@2x.png:
* internal_open@3x.png:
* ShareFileImplementation.cs:
* SelectableLabelRenderer.cs:
* MaintenanceTicketComment.cs:
* clip.png:
* file_paths.xml:
* internal_closed@2x.png:
* MaintenanceTicketsPage.xaml.cs:
* TicketDetailsPageModel.cs:
* internal_closed@3x.png:
* clip.png:
* AndroidManifest.xml:
* clip.png:
* Resource.designer.cs:
* clip.png:
* clip.png:
* clip.png:
* clip.png:
* clip.png:
* MaintenanceTicketsPageModel.cs:
* clip.png:
* clip.png:
* clip_iso.png:
* clip_iso.png:

--- a/ManageGo/Views/WelcomePage.xaml
+++ b/ManageGo/Views/WelcomePage.xaml
@@ -13,8 +13,9 @@
                     HorizontalOptions="Start"
                     IsVisible="{Binding HamburgerIsVisible}"
                     VerticalOptions="CenterAndExpand"
+                    WidthRequest="42"
                     Image="nav_menu_icon.png" />
-            <Image Source="logo.png" Margin="-32,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+            <Image Source="logo.png" Margin="-42,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <ScrollView BackgroundColor="#f9fafb" VerticalOptions="FillAndExpand">
             <StackLayout Spacing="0">
