--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -4,6 +4,7 @@
              ios:Page.UseSafeArea="true"
              xmlns:local="clr-namespace:ManageGo"
              BackgroundColor="#f9fafb"
+             x:Name="ThisPage"
              xmlns:controls="clr-namespace:ManageGo.Controls"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.MaintenanceTicketsPage">
     <ContentPage.Resources>
@@ -24,10 +25,11 @@
             <Button BackgroundColor="Transparent"
                     Command="{Binding OnMasterMenuTapped}"
                     HorizontalOptions="Start"
+                    WidthRequest="42"
                     IsVisible="{Binding HamburgerIsVisible}"
                     VerticalOptions="CenterAndExpand"
                     Image="nav_menu_icon.png" />
-            <Image Source="logo.png" Margin="-32,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+            <Image Source="logo.png" Margin="-42,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <StackLayout Spacing="0" Grid.Row="1">
             <Label  Text="Tickets" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Small" HorizontalTextAlignment="Center"/>
@@ -41,10 +43,10 @@
                     <ColumnDefinition Width="1" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" VerticalOptions="CenterAndExpand" Command="{Binding OnCalendarButtonTapped}" Clicked="Handle_Clicked" Grid.Column="0" TextColor="Black" Image="calendar_blue.png" Text="Calendar"  />
+                <Button HorizontalOptions="Center" BackgroundColor="Transparent" Grid.Row="0" VerticalOptions="CenterAndExpand" Command="{Binding OnCalendarButtonTapped}" Clicked="Handle_Clicked" Grid.Column="0" TextColor="Black" Image="calendar_blue.png" Text="Calendar"  />
                 <BoxView Grid.Row="0" VerticalOptions="CenterAndExpand" Grid.Column="1" BackgroundColor="#ebebeb" WidthRequest="1" HorizontalOptions="FillAndExpand" />
                 <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
-                    <Button VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" Clicked="Handle_Clicked" TextColor="Black" Image="filter_blue.png" Text="Filter"  />
+                    <Button HorizontalOptions="Center" BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" Command="{Binding OnFilterTapped}" Clicked="Handle_Clicked" TextColor="Black" Image="filter_blue.png" Text="Filter"  />
                     <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="StartAndExpand" FontSize="Small" Margin="-3,8,0,0" TextColor="#318bfa"/>
                 </StackLayout>
             </Grid>
@@ -53,7 +55,7 @@
             <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
         </StackLayout>
        
-        <ListView x:Name="MyListView" ItemAppearing="Handle_ItemAppearing" ItemTapped="Handle_ItemTapped" Margin="0" IsPullToRefreshEnabled="false" CachingStrategy="RecycleElement" SelectionMode="None" IsEnabled="{Binding ListIsEnabled}" Grid.Row="2" HasUnevenRows="true" VerticalOptions="Fill" BackgroundColor="#f9fafb" SeparatorVisibility="None" ItemsSource="{Binding FetchedTickets}">
+        <ListView x:Name="MyListView" ItemAppearing="Handle_ItemAppearing" Margin="0" IsPullToRefreshEnabled="false" CachingStrategy="RecycleElement" SelectionMode="None" IsEnabled="{Binding ListIsEnabled}" Grid.Row="2" HasUnevenRows="true" VerticalOptions="Fill" BackgroundColor="#f9fafb" SeparatorVisibility="None" ItemsSource="{Binding FetchedTickets}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -105,6 +107,9 @@
                                     </StackLayout.GestureRecognizers>
                                 </StackLayout>
                             </Grid>  
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnItemTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
+                                </Frame.GestureRecognizers>
                         </Frame>
                     </ViewCell>
                 </DataTemplate>
