* AutoFitTextureView.cs: updated to android camera2 api
* Jpeg.cs:
* Orientation.cs:
* CameraPreview.cs:
* CameraDroid.cs:
* CamRecorder.cs:
* CalendarRenderer.cs:
* CalendarViewPage.cs:
* TicketDetailsPage.xaml:
* CalendarPageAdapter.cs:
* ManageGo.Android.csproj:
* CameraPreviewRenderer.cs:
* TakeVideoPageModel.cs:
* CameraCaptureListener.cs:
* ImageAvailableListener.cs:
* CameraCaptureEventArgs.cs:
* TicketDetailsPageModel.cs:
* AndroidManifest.xml:
* Resource.designer.cs:
* CameraLayout.xml:

--- a/ManageGo/Views/TicketDetailsPage.xaml
+++ b/ManageGo/Views/TicketDetailsPage.xaml
@@ -207,7 +207,7 @@
                      RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width,Factor=0.8,Constant=0}">
             <StackLayout HorizontalOptions="FillAndExpand" >
                 <StackLayout Orientation="Horizontal" Margin="22,16,0,8">
-                    <Image WidthRequest="47" VerticalOptions="CenterAndExpand" Source="camera_1.png" />
+                    <Image WidthRequest="47" HeightRequest="47" VerticalOptions="CenterAndExpand" Source="camera_1.png" />
                     <Label FontSize="Large" VerticalOptions="CenterAndExpand"  HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" Text="Take photo/video" TextColor="#318bfa" />
                 <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1"  Command="{Binding OnTakePhotoTapped}" />
@@ -217,7 +217,7 @@
                 <BoxView HeightRequest="0.5" BackgroundColor="Gray" />
                 
                 <StackLayout Orientation="Horizontal" Margin="22,8,0,8" >
-                    <Image WidthRequest="47" VerticalOptions="CenterAndExpand" Source="camera_2.png" />
+                    <Image WidthRequest="47" HeightRequest="47" VerticalOptions="CenterAndExpand" Source="camera_2.png" />
                     <Label FontSize="Large" VerticalOptions="CenterAndExpand"  HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" Text="Upload photo/video" TextColor="#318bfa" />
                 <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1"  Command="{Binding OnUploadPhotoTapped}" />
@@ -229,7 +229,7 @@
                 <BoxView HeightRequest="0.5" BackgroundColor="Gray" />
                 
                  <StackLayout Orientation="Horizontal" Margin="22,8,0,16" >
-                    <Image WidthRequest="47" VerticalOptions="CenterAndExpand" Source="camera_3.png" />
+                    <Image WidthRequest="47" HeightRequest="47" VerticalOptions="CenterAndExpand" Source="camera_3.png" />
                     <Label FontSize="Large" VerticalOptions="CenterAndExpand"  HorizontalOptions="StartAndExpand" BackgroundColor="Transparent" Text="Upload file" TextColor="#318bfa" />
                 <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1"  Command="{Binding OnUploadPhotoTapped}" />
